TM-113: google auth (#374)
